--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,9 +4,9 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-  <welcome-file-list>
-    <welcome-file>TestConnectionServlet</welcome-file>
+  <!--<welcome-file-list>-->
+    <!--<welcome-file>TestConnectionServlet</welcome-file>-->
     <!--<welcome-file>index.jsp</welcome-file>-->
     <!--<welcome-file>index.html</welcome-file>-->
-  </welcome-file-list>
+  <!--</welcome-file-list>-->
 </web-app>
