--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
 
     <wildfly.startupTimeout>300</wildfly.startupTimeout>
 
+
+
   </properties>
 
   <dependencies>
@@ -53,29 +55,30 @@
       <version>1.2</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>${log4j.version}</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.apache.logging.log4j</groupId>-->
+      <!--<artifactId>log4j-core</artifactId>-->
+      <!--<version>${log4j.version}</version>-->
+    <!--</dependency>-->
 
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j-impl</artifactId>
-      <version>${log4j.version}</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.apache.logging.log4j</groupId>-->
+      <!--<artifactId>log4j-slf4j-impl</artifactId>-->
+      <!--<version>${log4j.version}</version>-->
+    <!--</dependency>-->
 
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-ext</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.slf4j</groupId>-->
+      <!--<artifactId>slf4j-ext</artifactId>-->
+      <!--<version>${slf4j.version}</version>-->
+    <!--</dependency>-->
 
     <!--<dependency>-->
       <!--<groupId>mysql</groupId>-->
       <!--<artifactId>mysql-connector-java</artifactId>-->
       <!--<version>6.0.6</version>-->
     <!--</dependency>-->
+
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
@@ -100,7 +103,19 @@
       <version>1.5.6</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.2.10.Final</version>
+      <!--<scope>${scope.settings}</scope>-->
+    </dependency>
 
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>5.2.10.Final</version>
+      <!--<scope>${scope.settings}</scope>-->
+    </dependency>
   </dependencies>
 
 
