--- a/pom.xml
+++ b/pom.xml
@@ -73,23 +73,23 @@
       <!--<version>${slf4j.version}</version>-->
     <!--</dependency>-->
 
-    <!--<dependency>-->
-      <!--<groupId>mysql</groupId>-->
-      <!--<artifactId>mysql-connector-java</artifactId>-->
-      <!--<version>6.0.6</version>-->
-    <!--</dependency>-->
-
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.39</version>
+      <version>6.0.6</version>
     </dependency>
 
-    <dependency>
-      <groupId>javax.mail</groupId>
-      <artifactId>mail</artifactId>
-      <version>1.4.7</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>mysql</groupId>-->
+      <!--<artifactId>mysql-connector-java</artifactId>-->
+      <!--<version>5.1.39</version>-->
+    <!--</dependency>-->
+
+    <!--<dependency>-->
+      <!--<groupId>javax.mail</groupId>-->
+      <!--<artifactId>mail</artifactId>-->
+      <!--<version>1.4.7</version>-->
+    <!--</dependency>-->
 
     <dependency>
       <groupId>javax.mail</groupId>
@@ -107,6 +107,7 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>5.2.10.Final</version>
+      <scope>provided</scope>
       <!--<scope>${scope.settings}</scope>-->
     </dependency>
 
@@ -115,6 +116,7 @@
       <artifactId>hibernate-entitymanager</artifactId>
       <version>5.2.10.Final</version>
       <!--<scope>${scope.settings}</scope>-->
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
