--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
     <log4j.version>2.8.1</log4j.version>
     <slf4j.version>1.7.24</slf4j.version>
 
-    <wildfly.adminUsername>admin</wildfly.adminUsername>
-    <wildfly.adminPassword>admin123</wildfly.adminPassword>
-    <wildfly.add-user>${wildfly.adminUsername}:${wildfly.adminPassword}:group:ManagementRealm:false</wildfly.add-user>
+    <!--<wildfly.adminUsername>admin</wildfly.adminUsername>-->
+    <!--<wildfly.adminPassword>admin123</wildfly.adminPassword>-->
+    <!--<wildfly.add-user>${wildfly.adminUsername}:${wildfly.adminPassword}:group:ManagementRealm:false</wildfly.add-user>-->
 
     <wildfly.startupTimeout>300</wildfly.startupTimeout>
 
@@ -138,17 +138,17 @@
       </configuration>
     </plugin>
 
-    <plugin>
-    <groupId>org.wildfly.plugins</groupId>
-    <artifactId>wildfly-maven-plugin</artifactId>
-    <version>1.1.0.Final</version>
-    <configuration>
-      <!--<hostname>localhost</hostname>-->
-      <!--<port>9865</port>-->
-      <username>${wildfly.adminUsername}</username>
-      <password>${wildfly.adminPassword}</password>
-    </configuration>
-  </plugin>
+    <!--<plugin>-->
+    <!--<groupId>org.wildfly.plugins</groupId>-->
+    <!--<artifactId>wildfly-maven-plugin</artifactId>-->
+    <!--<version>1.1.0.Final</version>-->
+    <!--<configuration>-->
+      <!--&lt;!&ndash;<hostname>localhost</hostname>&ndash;&gt;-->
+      <!--&lt;!&ndash;<port>9865</port>&ndash;&gt;-->
+      <!--<username>${wildfly.adminUsername}</username>-->
+      <!--<password>${wildfly.adminPassword}</password>-->
+    <!--</configuration>-->
+  <!--</plugin>-->
 
   </plugins>
   </build>
