--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,19 @@
       <!--<scope>${scope.settings}</scope>-->
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.1.1</version>
+    </dependency>
+
   </dependencies>
 
 
