--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,25 @@
       <version>4.1.1</version>
     </dependency>
 
+    <!-- Quartz API -->
+    <dependency>
+      <groupId>opensymphony</groupId>
+      <artifactId>quartz</artifactId>
+      <version>1.6.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.directory.studio</groupId>
+      <artifactId>org.apache.commons.logging</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+
   </dependencies>
 
 
