--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
       <artifactId>org.apache.commons.logging</artifactId>
       <version>1.1.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>3.7</version>
+    </dependency>
 
   </dependencies>
 
